# org-struct-back

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  taskfile.yml
.github/workflows/: cicd.yml
data/: data.csv
org_struct_back/api/: api.py  dtos.py  node_router.py
org_struct_back/api/dtos/: dtos.py  node_dtos.py
org_struct_back/api/routers/: node_router.py
org_struct_back/app/: dependency.py  ioc_service.py  main.py  server.py
org_struct_back/cli/: main.py
org_struct_back/pkg/struct_reader/: struct_reader.py
org_struct_back/service/: domain.py  models.py
org_struct_back/service/domain/: node_service.py
org_struct_back/service/models/: node_models.py
org_struct_back/settings/: database_settings.py  node_settings.py  server_settings.py  struct_reader_settings.py
org_struct_back/storage/: database.py  entities.py  node_repository.py
