[project]
name = "org-struct-back"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Aleksey", email = "a.e.sokolkov@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
]


[tool.poetry.scripts]
main = "org_struct_back.cli.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
