[project]
name = "org-struct-back"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{name = "Aleksey", email = "a.e.sokolkov@gmail.com"}]
requires-python = ">=3.13,<4.0"
dependencies = [
  "fastapi[standard] (>=0.115.11,<0.116.0)",
  "uvicorn[standard] (>=0.34.0,<0.35.0)",
  "pydantic-settings (>=2.8.1,<3.0.0)",
  "punq (>=0.7.0,<0.8.0)",
]

[tool.poetry.group.dev.dependencies]
toml-sort = "^0.24.2"
ruff = "^0.9.10"
mypy = "^1.15.0"
deptry = "^0.23.0"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
pretty = true
python_version = 3.13
show_error_codes = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = ["E501", "RET504", "S104"]
select = [
  "A",
  "ARG",
  "B",
  "C4",
  "E",
  "ERA",
  "I",
  "F",
  "G",
  "N",
  "PL",
  "PT",
  "RET",
  "S",
  "SIM",
  "SLF",
  "T20",
  "UP",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.tomlsort]
in_place = true
no_sort_tables = true
trailing_comma_inline_array = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
